--- a/linux-loadtest.yaml
+++ b/linux-loadtest.yaml
@@ -1,1 +1,42 @@
-loadtest site
+trigger:
+  - none
+pool:
+  vmImage: ubuntu-latest
+parameters:
+  - name: package_link
+    displayName: Linux Package URL
+    type: string
+jobs:
+- deployment: VMDeploy
+  displayName: BoldBI
+  pool:
+    vmImage: 'Ubuntu-latest'
+  environment:
+    name: 
+    resourceType: VirtualMachine
+  strategy:
+      runOnce:
+        deploy:
+          steps:
+          - task: Bash@3
+            inputs:
+              targetType: 'inline'
+              script: |
+                cd ~
+                ls
+                echo "Admin@123" | sudo -S mkdir boldbi
+                cd boldbi 
+                sudo wget --no-check-certificate '${{parameters.package_link}}'
+                sudo unzip BoldBIEnterpriseEdition_Linux_*
+                cd BoldBIEnterpriseEdition-Linux
+                if [ -d /var/www/bold-services ]; then
+                echo "Upgrade Command"
+                chmod +x install-boldbi.sh
+                sudo bash install-boldbi.sh -i upgrade
+                else
+                echo "Fresh Installation"
+                chmod +x install-boldbi.sh
+                sudo bash install-boldbi.sh -i new -u root -h https://hotfix-linux.boldbi.com -n true
+                fi
+                cd ~
+                sudo rm -rf boldbi
