--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ jobs:
             az vm create \
               --resource-group azurepipeline \
               --name windows \
-              --image microsoft-ads:windows-10:windows-10:pro:latest \
+              --image microsoft-ads:windows-10:windows-10:pro:20h2-pro \
               --public-ip-sku Standard \
               --size Standard_D2s_v3 \
               --admin-username syncfusion \
