--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,3 +32,8 @@ jobs:
               --nsg-rule SSH \
               --nsg-rule RDP \
               --public-ip-address-allocation static
+            az vm run-command invoke \
+              -g azurepipeline \
+              -n windows \
+              --command-id RunPowerShellScript \
+              --scripts "Install-WindowsFeature -name Web-Server -IncludeManagementTools"  
