--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,17 +32,9 @@ jobs:
               --nsg-rule SSH \
               --nsg-rule RDP \
               --public-ip-address-allocation static
-      - task: AzureCLI@2
-        displayName: 'Install BoldBI'
+      - task: PowerShellOnTargetMachines@3
         inputs:
-          azureSubscription: 'windowsVM-azurepipeline'
-          scriptType: 'bash'
-          scriptLocation: 'inlineScript'
-          inlineScript: |
-            az vm extension set \
-              --resource-group azurepipeline \
-              --vm-name windows \
-              --name CustomScriptExtension \
-              --publisher Microsoft.Azure.Extensions \
-              --version 2.0 \
-              --settings '{"commandToExecute":"powershell.exe Invoke-WebRequest -Uri https://s3.amazonaws.com/files2.syncfusion.com/Installs/Bold/BoldBI/v6.2.7/BoldBIEnterpriseEdition.exe"}'
+          Machines: '$ipAddress = [System.Net.Dns]::GetHostEntry($env:windows).AddressList.IPAddressToString'
+          UserName: 'syncfusion'
+          UserPassword: 'Syncfusion@123'
+          InlineScript: 'Enable-WindowsOptionalFeature -Online -FeatureName IIS-ManagementConsole -All'
