--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,18 +23,17 @@ jobs:
           inlineScript: |
             az vm create \
               --resource-group azurepipeline \
-              --name windows1 \
+              --name windows \
               --image MicrosoftWindowsDesktop:Windows-10:win10-21h2-pro-g2:19044.2364.221205 \
               --public-ip-sku Standard \
-              --public-ip-address myipnew1 \
+              --public-ip-address myipnew \
               --size Standard_D2s_v3 \
               --admin-username syncfusion \
               --admin-password Syncfusion@123 \
               --nsg-rule SSH \
               --nsg-rule RDP \
               --public-ip-address-allocation static   
-            $ipAddress = az vm show -d --resource-group azurepipeline --name windows1 --query publicIps --output tsv 
-            echo "$ipAddress"      
+            az network public-ip show --resource-group azurepipeline --name myipnew --query ipAddress -otsv      
       - task: AzureCLI@2
         inputs:
           azureSubscription: 'windowsVM-azurepipeline'
@@ -42,17 +41,3 @@ jobs:
           scriptLocation: 'inlineScript'
           inlineScript: |
             az network public-ip show --resource-group azurepipeline --name myipnew --query ipAddress -otsv
-            # Get the public IP address of the VM
-            $publicIp = (Get-AzPublicIpAddress -ResourceGroupName azurepipeline -Name myipnew).IpAddress
-            
-            # Create a new Remote Desktop session to the VM
-            $username = 'syncfusion'
-            $password = 'Syncfusion@123'
-            $securePassword = ConvertTo-SecureString -String Syncfusion@123 -AsPlainText -Force
-            $credential = New-Object -TypeName System.Management.Automation.PSCredential -ArgumentList syncfusion, Syncfusion@123
-            $session = New-PSSession -ComputerName $publicIp -Credential $credential
-            
-            # Install IIS on the VM using the remote session
-            Invoke-Command -Session $session -ScriptBlock {
-            Enable-WindowsOptionalFeature -Online -FeatureName IIS-ManagementConsole -All
-            }
