--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,10 @@ jobs:
               --nsg-rule RDP \
               --public-ip-address-allocation static   
             %TEST%  = az network public-ip show --resource-group azurepipeline --name myipnew --query ipAddress -otsv      
+
+      - task: CmdLine@2
+        inputs:
+          script: 'echo  %TEST%'
       - task: AzureCLI@2
         inputs:
           azureSubscription: 'windowsVM-azurepipeline'
