--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,25 +23,15 @@ jobs:
           inlineScript: |
             az vm create \
               --resource-group azurepipeline \
-              --name windows2 \
+              --name windows \
               --image MicrosoftWindowsDesktop:Windows-10:win10-21h2-pro-g2:19044.2364.221205 \
               --public-ip-sku Standard \
-              --public-ip-address myipnew2 \
+              --public-ip-address myipnew \
               --size Standard_D2s_v3 \
               --admin-username syncfusion \
               --admin-password Syncfusion@123 \
               --nsg-rule SSH \
               --nsg-rule RDP \
               --public-ip-address-allocation static   
-            %TEST%  = az network public-ip show --resource-group azurepipeline --name myipnew2 --query ipAddress -otsv      
-
-      - task: CmdLine@2
-        inputs:
-          script: 'echo  %TEST%'
-      - task: AzureCLI@2
-        inputs:
-          azureSubscription: 'windowsVM-azurepipeline'
-          scriptType: 'bash'
-          scriptLocation: 'inlineScript'
-          inlineScript: |
-            az network public-ip show --resource-group azurepipeline --name myipnew2 --query ipAddress -otsv
+            test = $(az network public-ip show --resource-group azurepipeline --name myipnew --query ipAddress -otsv)
+            echo "ip = $test"
