--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ jobs:
               --size Standard_D2s_v3 \
               --admin-username syncfusion \
               --admin-password Syncfusion@123 \
-              --nsg-name newip
+              --nsg-name newip \
               --nsg-rule SSH \
               --nsg-rule RDP \
               --public-ip-address-allocation static
