--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,12 +24,12 @@ jobs:
             az vm create \
               --resource-group azurepipeline \
               --name windows \
-            az vm image terms accept --urn syncfusion:bold-bi-enterprise-multi-tenant:-bring-your-own-license:6.4.6 \
+              --urn syncfusion:bold-bi-enterprise-multi-tenant:-bring-your-own-license:6.4.6 \
               --public-ip-sku Standard \
               --size Standard_B4ms \
               --admin-username syncfusion \
               --admin-password Syncfusion@123 \
               --nsg-rule SSH \
               --nsg-rule RDP \
-              --public-ip-address-allocation static
+              --public-ip-address-allocation static \
               --license-type Windows_Server
