--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ jobs:
             az vm create \
               --resource-group azurepipeline \
               --name windows \
-              --urn syncfusion:bold-bi-enterprise-multi-tenant:-bring-your-own-license:6.4.6 \
+              --image syncfusion:bold-bi-enterprise-multi-tenant:-bring-your-own-license:6.4.6 \
               --public-ip-sku Standard \
               --size Standard_B4ms \
               --admin-username syncfusion \
@@ -32,4 +32,5 @@ jobs:
               --nsg-rule SSH \
               --nsg-rule RDP \
               --public-ip-address-allocation static \
-              --license-type Windows_Server
+              --license-type Windows_Server \
+            az vm image accept-terms --urn syncfusion:bold-bi-enterprise-multi-tenant:-bring-your-own-license:6.4.6  
