--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,8 +28,6 @@ jobs:
               --public-ip-sku Standard \
               --size Standard_B4ms \
               --admin-username syncfusion \
-              --admin-password Syncfusion@123 \
-              --nsg-rule SSH \
-              --nsg-rule RDP \
-              --public-ip-address-allocation static \
-              --license-type Windows_Server
+              --admin-password Syncfusion@123 \ 
+              --license-type Windows_Server \
+              --public-ip-address-allocation static
