--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,4 +27,5 @@ jobs:
               --image syncfusion:bold-bi-enterprise-multi-tenant:-bring-your-own-license:6.1.8 \
               --size Standard_B4ms \
               --admin-username syncfusion \
-              --admin-password Syncfusion@123
+              --admin-password Syncfusion@123 \
+            az vm image terms accept --publisher syncfusion --offer bold-bi-enterprise-multi-tenant --plan -bring-your-own-license  
