--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,7 @@ jobs:
             az vm create \
               --resource-group azurepipeline \
               --name windows \
+              --public-ip-sku Standard \
               --image syncfusion:bold-bi-enterprise-multi-tenant:-bring-your-own-license:6.1.8 \
               --size Standard_B4ms \
               --admin-username syncfusion \
