Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,7 @@ jobs:
               --public-ip-sku Standard \
               --image syncfusion:bold-bi-enterprise-multi-tenant:-bring-your-own-license:6.1.8 \
               --size Standard_B4ms \
+              --security-type Standard \
               --admin-username syncfusion \
               --admin-password Syncfusion@123
             az vm image terms accept --urn syncfusion:bold-bi-enterprise-multi-tenant:-bring-your-own-license:6.1.8  
