--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,9 +25,8 @@ jobs:
               --resource-group azurepipeline \
               --name windows \
               --public-ip-sku Standard \
-              --image syncfusion:bold-bi-enterprise-multi-tenant:-bring-your-own-license:6.1.8 \
+              --image syncfusion:bold-bi-enterprise-multi-tenant:-bring-your-own-license:6.4.6 \
               --size Standard_B4ms \
-              --security-type Standard \
               --admin-username syncfusion \
               --admin-password Syncfusion@123
-            az vm image terms accept --urn syncfusion:bold-bi-enterprise-multi-tenant:-bring-your-own-license:6.1.8  
+            az vm image terms accept --publisher syncfusion --offer bold-bi-enterprise-multi-tenant --plan -bring-your-own-license
