--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,5 +29,5 @@ jobs:
               --size Standard_B4ms \
               --admin-username syncfusion \
               --admin-password Syncfusion@123 \
-              --generation 1
+              --hyper-v-generation V1
             az vm image terms accept --publisher syncfusion --offer bold-bi-enterprise-multi-tenant --plan -bring-your-own-license
