--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,10 +24,10 @@ jobs:
             az vm create \
               --resource-group azurepipeline \
               --name windows \
-              --public-ip-sku Standard \
-              --image syncfusion:bold-bi-enterprise-multi-tenant:-bring-your-own-license:6.4.6 \
+              --image Win2019Datacenter \
               --size Standard_B4ms \
               --admin-username syncfusion \
               --admin-password Syncfusion@123 \
-              --hyper-v-generation V1
-            az vm image terms accept --publisher syncfusion --offer bold-bi-enterprise-multi-tenant --plan -bring-your-own-license
+              --nsg-rule SSH \
+              --nsg-rule RDP \
+              --public-ip-address-allocation static
