Update windows-pipeline.yaml for Azure Pipelines

--- a/windows-pipeline.yaml
+++ b/windows-pipeline.yaml
@@ -15,20 +15,18 @@ steps:
       resourceGroupName='pipeline-win'
       vmName='newloadtestwin'
       diskId='/subscriptions/43ab43f3-706d-4979-82e0-86025f9ece10/resourceGroups/pipeline-win/providers/Microsoft.Compute/disks/new'
+      osType='Windows'
       location='eastus'
       virtualNetworkName='winpipe-vnet'
       subnetName='default'
-      adminUsername='syncfusion'
-      adminPassword='Syncfusion@123'
 
       # Create VM from managed disk
       az vm create \
         --resource-group $resourceGroupName \
         --name $vmName \
         --attach-os-disk $diskId \
+        --os-type $osType \
         --location $location \
         --vnet-name $virtualNetworkName \
-        --subnet $subnetName \
-        --admin-username $adminUsername \
-        --admin-password $adminPassword
+        --subnet $subnetName 
 
